Changed README
Removed semaphore semantics and project running instructions from README.